...
    final DarkModeController _darkMode = Get.find();
    final CarController carController = Get.find();
    final LocationController _locationController = Get.find();
    double padd = MediaQuery.of(context).size.width * 0.01;
    print("build of Ruta_Widget");
    return Container(
      key: Key("RutaCalculada"),
      child: Align(
        alignment: Alignment.bottomLeft,
        child: Padding(
          padding: EdgeInsets.fromLTRB(padd, padd, padd, 0),
          child: Container(
              width: MediaQuery.of(context).size.width * 0.98,
...
                                      actions: [
                                        TextButton(
                                            onPressed: () {
                                              mc.makeFrecuent();
                                              Get.back();
                                            },
                                            child: Text("Si")),
                                        TextButton(
                                            onPressed: () {
                                              Get.back();
                                            },
                                            child: Text("No")),
                                        TextButton(
                                            onPressed: () {
                                              Get.back();
                                            },
                                            child: Text("Cancelar")),
                                      ],
...
  Widget boton(int tipoMenu, RouteEntity ruta, BuildContext context,
      MapController mc, UserController uc, LocationController _locationController, CarController carController) {
    print("El tipo de menu es: " + tipoMenu.toString());
    switch (tipoMenu) {
      case 0:
        return ElevatedButton(
          key: Key("Elegir vehiculo"),
            onPressed: () {
              if (uc.user.vehiculos.isNotEmpty) {
                Get.to(() => ElegirVehiculo());
              } else {
                showDialog(
                  context: context,
...
                      shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(30)),
                      content: Text(
                          "¿Esta seguro de que desea cancelar esta ruta?",
                          style: TextStyle(color: Colors.white)),
                      actions: [
                        TextButton(
                            key: Key("Cancelar ruta"),
                            onPressed: () {
                              mc.actualizarMenu(0);
                              _locationController.stopLocationStream();
                              Get.back();
                            },
                            child: Text("Si")),
...
                    ),
                  );
                }),
            Padding(padding: EdgeInsets.fromLTRB(32, 5, 30, 0),
            child:
            Container(
              key: Key("En camino"),
              width: 150,
              height: 40,
              decoration: BoxDecoration(
                  color: Colors.white, borderRadius: BorderRadius.circular(10)),
              child: Row(
                  mainAxisAlignment: MainAxisAlignment.spaceAround,
...
