...
                ),
              ),
              ),

              
              ListTile(
                title: Text('Inicio',style: myStyle(),),
                leading: FaIcon(FontAwesomeIcons.mapMarkedAlt,color: Colors.white), 
                onTap: (){
                  Navigator.pushNamed(context, '/map');
                },
              ),
              ListTile(
...
                leading: FaIcon(FontAwesomeIcons.user, color: Colors.white), 
                onTap: (){
                  Navigator.pushNamed(context, '/logged_in');
                },
              ),
              ListTile(
                title: Text('Mis rutas',style: myStyle(),),
                leading: FaIcon(FontAwesomeIcons.route, color: Colors.white), 
                onTap: (){
                  Navigator.pushNamed(context, '/misRutas');
                },
              ),
              
...
