...
                leading: Icon(Icons.settings, color: Colors.white),
                onTap: () {
                  Get.to(()=>Configuracion());
                },
              ),
              ListTile(
                key: Key("LogOut"),
                title: Text(
                  'Cerrar sesión',
                  style: myStyle(),
                ),
                leading: Icon(Icons.logout, color: Colors.white),
                onTap: () async {
...
